# laker-xsa

./: .editorconfig  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RESULTS.md  SECURITY.md  coverage.xml  pyproject.toml  setup_dev.bat  setup_dev.sh
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml
docs/: BENCHMARK_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_AUDIT.md  QUANTIFIED_IMPROVEMENTS.md  QUANTITATIVE_SUMMARY.md  architecture.md  benchmark_report.md  design_decisions.md  faq.md  getting-started.md  limitations.md  math.md
examples/: __init__.py  comparative_analysis.py  hard_benchmark.py  long_sequence_benchmark.py  minimal_training.py  nlp_sentiment_benchmark.py  run_benchmarks.py  run_forward.py
laker_xsa/: __init__.py  config.py
laker_xsa/attention/: __init__.py  _legacy.py  attention_kernel.py  core.py  functional.py  fused_attention_v2.py  kernel_attention.py  kernels.py  laker.py  standard.py  standard_attention.py  xsa.py  xsa_attention.py
laker_xsa/benchmarks/: __init__.py  conditioning.py  long_context.py  runtime.py
laker_xsa/cli/: __init__.py  benchmark.py  evaluate.py  train.py
laker_xsa/model/: __init__.py  full_model.py  transformer_block.py
laker_xsa/solver/: __init__.py  conjugate_gradient.py  functional.py  laker_preconditioner.py  preconditioner.py
laker_xsa/training/: __init__.py  losses.py  trainer.py
laker_xsa/utils/: __init__.py  seed.py  stability.py  tensor_ops.py
src/laker_xsa/: __init__.py  config.py
src/laker_xsa/attention/: __init__.py  kernel_attention.py  standard_attention.py  xsa_attention.py
src/laker_xsa/benchmarks/: __init__.py  conditioning.py  (+2 more)
tests/: __init__.py  test_attention.py  test_benchmarks.py  test_cli.py  test_config.py  test_functional.py  test_gradients.py  test_laker_v2.py  test_model.py  test_numerics.py  test_shapes.py  test_solver.py  test_training.py  test_utils.py
(+15 files in other folders)
