[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laker-xsa"
version = "0.1.0"
description = "Fused Exclusive Self Attention (XSA) and LAKER-style Kernel Attention"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LAKER-XSA Contributors"}
]
keywords = [
    "attention",
    "transformer",
    "xsa",
    "laker",
    "kernel-methods",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
bench = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]
train = [
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/your-org/laker-xsa"
Repository = "https://github.com/your-org/laker-xsa.git"
Issues = "https://github.com/your-org/laker-xsa/issues"

[project.scripts]
laker-xsa-train = "laker_xsa.cli.train:main"
laker-xsa-evaluate = "laker_xsa.cli.evaluate:main"
laker-xsa-benchmark = "laker_xsa.cli.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
